# zunda-bot-rs

./: .env  .env.sample  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  Shuttle.toml  deploy.sh  rust-toolchain
.codex/: prompt.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  chore_task.md  codex.md  later_task.md  logic_task.md  simple_bug_report.md  simple_feature_request.md  simple_task.md  ui_task.md
.github/PULL_REQUEST_TEMPLATE/: bug_fix.md  (+1 more)
.sqlx/: query-0fe22dde9594ca617bb952d007f6a9788071ef2f6805a405142aec6186d4080c.json  query-1dedc5bb3e82354de889ab50c7e9a22c20860f3f2e72c29d3d8acf860535e921.json  query-2c75b3f4e8ffaa1b7e7e35ca0edc64ff79e8dbbfe03e2360bba16c63f3fe6739.json  query-3653c74f70c8410fdf4e88cce3f3754566267ad25462d492cc8a6ea4ad9b6d49.json  query-756ad9e3417a0710bbca2b8e38d241c3ac1db06a30efbfd41d4bd52f1d01bbef.json  query-77b2fe8c141d704c1246d4d393c62057759facedf732db3e907e3605a979b3de.json  query-7f9228067d20f0fe306b9acafe97ebfee26715f1cc08d8bd2dd560c676bd7f9b.json  query-92c453aaf5b31f7ddfbcc9ffe2a31423e1dba5127830e9ab83d91dc18a458251.json  query-a03d2ce82c3b596bc8c02513678fa0a9934941df79320c92881c4efc1719fd02.json  query-db73f9376459a55c706d1dc60cd07e555297e2606a429d179d3947405e9cb14b.json  query-ed4a82b1c8dd0f9eb01fbb9b0fc0056525d5e778da1f2089e95b6a9dc3d47e16.json  query-fbd3031dbe374f7c96de8091092243cd6d9926fcc3a13d233502c4e73e367a6f.json  query-ff467339b7403afb3bed583802d4e5c3df99fe1ead27701cb96f63fc5d27cd93.json
docs/: ER.puml  about_git.md  birth_コマンド.puml  birth_プッシュ通知.puml  birth_共通.puml  birth_初期化.puml  birthコマンド.puml  初期化処理.puml
src/: annual_birthday_notifier.rs  constants.rs  main.rs
(+59 files in other folders)
