[package]
name = "zunda-bot-rs"
version = "0.1.0"
edition = "2021"
authors = ["novum-d <example@gmail.com>"]

[dependencies]
serenity = { version = "0.12.0", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
poise = "0.6.1"
anyhow = "1.0.98"
tokio = { version = "1.45.1", features = ["macros", "rt"] }
shuttle-runtime = "0.55.0"
shuttle-serenity = "0.55.0"
tracing = "0.1.37"
