[package]
name = "zunda-bot-rs"
version = "0.1.0"
edition = "2021"
authors = ["novum-d <example@gmail.com>"]

[dependencies]
serenity = { version = "0.12.0", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
poise = "0.6.1"
anyhow = "1.0.98"
tokio = { version = "1.45.1", features = ["io-util", "macros", "net", "rt-multi-thread", "time"] }
chrono = "0.4.41"
chrono-tz = "0.10.3"
sqlx = { version = "0.8.6", features = ["chrono", "postgres", "runtime-tokio-rustls"] }
tracing = "0.1.37"
dotenvy = "0.15.7"
